# Turbo-Kompresor-2000

./: .gitignore  CMakeLists.txt  README.md  archive.cpp  archive.h  archive_structures.cpp  archive_structures.h  archive_window.cpp  archive_window.h  archive_window.ui  arithmetic_coding.cpp  arithmetic_coding.h  cli.cpp  cli.hpp  compression.cpp  compression.h  config.cpp  config.h  cryptography.cpp  cryptography.h  integrity_validation.cpp  integrity_validation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydialog.cpp  mydialog.h  mydialog.ui  notcompression.cpp  notcompression.h  processing_dialog.cpp  processing_dialog.h  processing_dialog.ui  processingdialog.cpp  processingdialog.h  project_exceptions.cpp  project_exceptions.h  resources.qrc  settings_dialog.cpp  (+6 more)
deprecated/: statistical_tools.cpp  statistical_tools.h
misc/: aes_functions.h  custom_tree_widget_items.cpp  custom_tree_widget_items.h  dc3.h  model.h  multithreading.cpp  multithreading.h  processing_helpers.cpp  processing_helpers.h  statistics.h
resources/icons/: icons.qrc
testUtil/: ReportGenerator.py  ReportGeneratorBase.py  ReportGeneratorProcessed.py  ReportGeneratorRaw.py  Results.py  consts.py  helpers.py  main.py  plotter.py  testRunner.py
